# tdc

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DECISIONS.md  LICENSE  PLANE2D-DECODE-SPEEDUP.md  PORTING.md  README.md  SPEEDUP-TODO.md  VECTRA_REWIRE.md  index.html  mkdocs.yml  notes.md  plan.md  selling_point.md  sitemap.xml  tdc_completion.md  tdc_main.txt  tdc_timers.txt  todo.md  todo_f64_entropy.md  vignettes.md
.github/workflows/: ci.yml  docs.yml
backends/entropy/: index.html
backends/models/: index.html
backends/transforms/: index.html
bench/: RESULTS.md  _test_api.py  bench_lz2_opt.c  bench_lz_decode_micro.c  bench_lz_opt.c  bench_lz_streams_quick.c  bench_plane_decode.c  bench_pred3d_avg3.c  bench_throughput.c  bench_zstd_compare.py  fetch_regional.py  prepare_real_data.py
build_release/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bench_pred3d_avg3.vcxproj  bench_pred3d_avg3.vcxproj.filters  bench_throughput.vcxproj  bench_throughput.vcxproj.filters  cmake_install.cmake  tdc.slnx  tdc.vcxproj  tdc.vcxproj.filters  tdc_smoke.vcxproj  tdc_smoke.vcxproj.filters  test_byte_shuffle_roundtrip.vcxproj  test_byte_shuffle_roundtrip.vcxproj.filters  test_delta1d_roundtrip.vcxproj  test_delta1d_roundtrip.vcxproj.filters  test_dict1d_roundtrip.vcxproj  test_dict1d_roundtrip.vcxproj.filters  test_format_validate.vcxproj  test_format_validate.vcxproj.filters  test_fse_roundtrip.vcxproj  test_fse_roundtrip.vcxproj.filters  test_huffman_roundtrip.vcxproj  test_huffman_roundtrip.vcxproj.filters  test_lz2_roundtrip.vcxproj  test_lz2_roundtrip.vcxproj.filters  test_pipeline_roundtrip.vcxproj  test_pipeline_roundtrip.vcxproj.filters  test_pred2d_roundtrip.vcxproj  test_pred2d_roundtrip.vcxproj.filters  test_pred3d_roundtrip.vcxproj  test_pred3d_roundtrip.vcxproj.filters  test_quantize_roundtrip.vcxproj  test_quantize_roundtrip.vcxproj.filters  test_raw_roundtrip.vcxproj  (+3 more)
build_release/Release/: tdc.lib
docs/: index.md  integration.md  quickstart.md
docs/backends/: entropy.md  models.md  transforms.md
docs/examples/: entropy_corrupt_lz.c  entropy_roundtrip_huffman.c  entropy_truncated_lz.c  migration_one_column.c  models_plane2d.c  models_pred2d_kinds.c  models_raw.c  quickstart_roundtrip.c  tuning_pipeline_compare.c  xforms_chain_compare.c
docs/extending/: custom-backends.md
docs/format/: on-disk.md
docs/performance/: tuning.md
docs/reference/: migration-vtr.md  troubleshooting.md
docs/stylesheets/: extra.css
docs/theory/: lz-inner-loop.md  predictors.md
examples/: entropy_bench_incompressible.c  entropy_bench_mixed.c  entropy_bench_repetitive.c  entropy_roundtrip_lz.c  entropy_roundtrip_none.c  entropy_which_wins.c  format_hexdump.c  format_peek_header.c  integration_arena.c  integration_consumer.c  integration_error.c  models_delta1d.c  models_edge_cases.c  models_pred3d.c  quickstart_codec_compare.c  quickstart_common.h  quickstart_error.c  quickstart_raster2d.c  quickstart_stack2d.c  quickstart_vector1d.c  quickstart_volume3d.c  theory_lz_histogram.c  theory_residual_printer.c  troubleshooting_statuses.c  tuning_knob_walk.c  xforms_edge_cases.c  xforms_order_matters.c  xforms_quantize_tune.c  xforms_roundtrip.c
examples/plugin/: README.md  xor_entropy.c
extending/custom-backends/: index.html
format/on-disk/: index.html
include/: tdc.h
include/tdc/: codec.h  entropy.h  error.h  format.h  model.h  plugin.h  pushpull.h  stream.h  transform.h  types.h  version.h
integration/: index.html
performance/tuning/: index.html
quickstart/: index.html
reference/migration-vtr/: index.html
reference/troubleshooting/: index.html
search/: search_index.json
src/api/: decode.c  decode_dict.c  decode_ex.c  decode_ex_integration.h  decode_impl.c  decode_into.c  decode_varlen.c  driver_internal.h  encode.c  pushpull_decode.c  pushpull_encode.c  stream_decode.c  stream_encode.c
src/core/: arena.c  arena.h  block.c  buffer.h  decode_profile.c  decode_profile.h  error.c  float_order.h  log.h  registry.c  simd.h  stream.c  stream.h  timer.h  version.c
src/entropy/: deflate.c  entropy_internal.h  fse.c  fse_internal.h  huffman.c  huffman4.c  huffman_internal.h  lane.c  lz.c  lz2.c  lz2_internal.h  lz2_opt.c  lz_internal.h  lz_opt.c  lz_streams.c  match_finder.h  mf_btree.c  mf_hashchain.c  none.c
src/format/: block_record.c  header.c  metadata.c  metadata_internal.h  rowgroup.c  rowgroup_internal.h  schema.c  schema_internal.h  stats.c  stats_internal.h
src/layout/: layout_internal.h  tiling.c  traverse.c
src/model/: delta1d.c  delta2_1d.c  dict.c  dict_numeric.c  float_pred_helpers.h  fpc1d.c  model_internal.h  model_load_store.h  plane2d.c  pred2d.c  pred2d_internal.h  pred3d.c  pred3d_float.c  quantize_pred2d.c  raw.c  sparse_zero_1d.c  stack2d.c
src/symbols/: residuals.c  runs.c  symbols_internal.h
src/transform/: bitshuffle.c  complement.c  quantize.c  shuffle.c  transform_internal.h  zigzag.c
tests/: CMakeTestLocal.txt  test_adversarial_inputs.c  test_bitshuffle_roundtrip.c  test_byte_shuffle_roundtrip.c  test_complement_roundtrip.c  test_decode_ex.c  test_decode_into.c  test_decode_varlen.c  test_deflate_roundtrip.c  test_delta1d_roundtrip.c  test_delta2_fpc_roundtrip.c  test_dict1d_roundtrip.c  test_dict_defer_e2e.c  test_dict_numeric_roundtrip.c  test_dnum_e2e.c  test_entropy_corrupt.c  test_format_validate.c  test_fse_roundtrip.c  test_huffman_roundtrip.c  test_lane_roundtrip.c  test_lz2_opt_roundtrip.c  test_lz2_roundtrip.c  test_lz_opt_roundtrip.c  test_lz_roundtrip.c  test_lz_streams_roundtrip.c  test_pipeline_roundtrip.c  test_plugin.c  test_pred2d_roundtrip.c  test_pred2d_wf_consistency.c  test_pred3d_roundtrip.c  test_pushpull_roundtrip.c  test_quantize_pred2d_roundtrip.c  test_quantize_roundtrip.c  test_raw_roundtrip.c  test_rowgroup_index.c  test_rowgroup_stats.c  test_schema.c  test_smoke.c  test_sparse_zero_e2e.c  test_sparse_zero_roundtrip.c  (+6 more)
theory/lz-inner-loop/: index.html
tools/: tdc_inspect.c
(+146 files in other folders)
